--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,13 +6,17 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.p47_70.myapplication"
+        applicationId "com.hula.myapplication"
         minSdk 23
         targetSdk 32
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    dataBinding {
+        enabled = true
     }
 
     buildTypes {
