[feat] 1、提供actionbar,2、提供switch 3、提供通用确认弹框 4、提供EditText 5、提供TextView

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,9 @@ android {
     dataBinding {
         enabled = true
     }
+    viewBinding{
+        enabled = true
+    }
 
     buildTypes {
         release {
@@ -50,4 +53,8 @@ dependencies {
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
     //布局
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    //屏幕适配
+    implementation 'com.github.JessYanCoding:AndroidAutoSize:v1.2.1'
+
+
 }
