--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,16 +32,16 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:supportsRtl="true"
         android:requestLegacyExternalStorage="true"
+        android:supportsRtl="true"
         android:theme="@style/AppTheme.HulaTheme">
 
         <meta-data
             android:name="design_width_in_dp"
-            android:value="375"/>
+            android:value="375" />
         <meta-data
             android:name="design_height_in_dp"
-            android:value="640"/>
+            android:value="640" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -69,6 +69,16 @@
             android:configChanges="orientation|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".view.login.RegisterActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".view.login.RegisterPhoneActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".view.login.RegisterEmailActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".view.login.RegisterSchoolActivity"
+            android:screenOrientation="portrait"/>
 
     </application>
 
