--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,9 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.GET_TASKS" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <!--    关闭省电权限-->
     <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
@@ -78,6 +78,16 @@
         <activity android:name=".view.login.RegisterEmailActivity"
             android:screenOrientation="portrait"/>
         <activity android:name=".view.login.RegisterSchoolActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".view.login.RegisterFavoriteActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".view.login.RegisterPicActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".view.login.RegisterLocationActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".view.login.RegisterNotificationActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".view.login.RegisterIntroActivity"
             android:screenOrientation="portrait"/>
 
     </application>
