--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,12 @@
 
     <uses-permission android:name="android.permission.FLASHLIGHT" />
 
+
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+
     <application
         android:name=".app.RootApplication"
         android:allowBackup="true"
@@ -35,6 +41,19 @@
         android:requestLegacyExternalStorage="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.HulaTheme">
+
+<!--        <queries package="com.hula.myapplication">-->
+<!--            <intent>-->
+<!--                <action android:name="android.media.action.IMAGE_CAPTURE">-->
+
+<!--                </action>-->
+<!--            </intent>-->
+<!--            <intent>-->
+<!--                <action android:name="android.media.action.ACTION_VIDEO_CAPTURE">-->
+
+<!--                </action>-->
+<!--            </intent>-->
+<!--        </queries>-->
 
         <meta-data
             android:name="design_width_in_dp"
