--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,6 @@ dependencies {
 
     implementation 'com.guolindev.permissionx:permissionx:1.6.4'
 
+    implementation 'com.github.1002326270xc:LayoutManager-FlowLayout:v1.8'
+
 }
