--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -110,7 +110,11 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".view.home.AddNewEventActivity"
             android:screenOrientation="portrait"/>
-
+        <activity
+            android:name=".view.mine.profile.ProfileActivity"
+            android:configChanges="orientation|screenSize"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
