--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,4 +87,6 @@ dependencies {
     implementation 'com.github.florent37:singledateandtimepicker:2.2.7'
 
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
+    implementation 'com.romandanylyk:pageindicatorview:1.0.3'
 }
