--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -98,7 +98,7 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustNothing" />
         <activity
-            android:name=".view.login.RegisterActivity"
+            android:name=".view.login.RegisterOrLoginActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".view.login.RegisterPhoneActivity"
@@ -223,6 +223,10 @@
             android:configChanges="orientation|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
+        <activity android:name=".view.login.LoginPhoneActivity"
+            android:configChanges="orientation|screenSize"/>
+        <activity android:name=".view.login.StartActivity"
+            android:configChanges="orientation|screenSize"/>
     </application>
 
 </manifest>
