--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,4 +107,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:30.4.1')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-storage-ktx'
+//    implementation 'com.facebook.android:facebook-android-sdk:8.'
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-auth-ktx'
 }
