--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,23 +25,25 @@ android {
     viewBinding{
         enabled = true
     }
-//    signingConfigs {
-//        release {
-//            storeFile new File(project.rootProject.projectDir.absolutePath + "/hulakeystore.jks")
-//            storePassword "hula123456"
-//            keyAlias "hula123"
-//            keyPassword "hula123456"
-//        }
-//    }
+    signingConfigs {
+        config {
+            storeFile new File(project.rootProject.projectDir.absolutePath + "/hulakeystore.jks")
+            storePassword "hula123456"
+            keyAlias "hula123"
+            keyPassword "hula123456"
+        }
+    }
 
     buildTypes {
         release {
-//            signingConfig signingConfigs.release
+            signingConfig signingConfigs.config
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
-//            signingConfig signingConfigs.release
+            signingConfig signingConfigs.config
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     compileOptions {
