--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -227,6 +227,7 @@
             android:configChanges="orientation|screenSize"/>
         <activity android:name=".view.login.StartActivity"
             android:configChanges="orientation|screenSize"/>
+        <activity android:name=".view.login.RegisterInviteCodeActivity" />
     </application>
 
 </manifest>
